tools/vz/pkg/analysis/test/cluster/ingress-ip-not-found/cluster-snapshot/verrazzano-ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm/logs.txt
# Copyright (c) 2023, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
2022-05-25T13:19:22.894482Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-05-25T13:19:22.894548Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=
INBOUND_PORTS_EXCLUDE=15090,15021,80,443,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-05-25T13:19:22.894950Z	info	Writing following contents to rules file: /tmp/iptables-rules-1653484762894693261.txt499019045
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-05-25T13:19:22.895020Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1653484762894693261.txt499019045
2022-05-25T13:19:22.911735Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1653484762911658881.txt2495653162

2022-05-25T13:19:22.911776Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1653484762911658881.txt2495653162
2022-05-25T13:19:22.925501Z	info	Running command: iptables-save 
2022-05-25T13:19:22.944900Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Wed May 25 13:19:22 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Wed May 25 13:19:22 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
==== START logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
-------------------------------------------------------------------------------
NGINX Ingress controller
  Release:       1.1.1-20220413170248-b60724ed1
  Build:         git-b60724ed1
  Repository:    https://github.com/verrazzano/ingress-nginx.git
  nginx version: nginx/1.19.9

-------------------------------------------------------------------------------

W0525 13:19:41.861243       8 client_config.go:615] Neither --kubeconfig nor --master was specified.  Using the inClusterConfig.  This might not work.
I0525 13:19:41.861732       8 main.go:223] "Creating API client" host="https://REDACTED-IP4-ADDRESS:443"
W0525 13:19:46.761902       8 main.go:264] Initial connection to the Kubernetes API server was retried 3 times.
I0525 13:19:46.762066       8 main.go:267] "Running in Kubernetes cluster" major="1" minor="22" git="v1.22.5" state="clean" commit="c999fea1e6dbf111d64000dfaaff45edaa4c34d2" platform="linux/amd64"
I0525 13:19:46.773917       8 main.go:86] "Valid default backend" service="ingress-nginx/ingress-controller-ingress-nginx-defaultbackend"
I0525 13:19:47.196324       8 main.go:104] "SSL fake certificate created" file="/etc/ingress-controller/ssl/default-fake-certificate.pem"
I0525 13:19:47.271607       8 nginx.go:255] "Starting NGINX Ingress controller"
I0525 13:19:47.319312       8 event.go:282] Event(v1.ObjectReference{Kind:"ConfigMap", Namespace:"verrazzano-ingress-nginx", Name:"ingress-controller-ingress-nginx-controller", UID:"daebff85-5204-488a-ad27-146c10286e72", APIVersion:"v1", ResourceVersion:"4329", FieldPath:""}): type: 'Normal' reason: 'CREATE' ConfigMap ingress-nginx/ingress-controller-ingress-nginx-controller
I0525 13:19:48.477004       8 nginx.go:297] "Starting NGINX process"
I0525 13:19:48.477093       8 leaderelection.go:248] attempting to acquire leader lease ingress-nginx/ingress-controller-leader...
I0525 13:19:48.478818       8 controller.go:155] "Configuration changes detected, backend reload required"
I0525 13:19:48.502566       8 leaderelection.go:258] successfully acquired lease ingress-nginx/ingress-controller-leader
I0525 13:19:48.502810       8 status.go:84] "New leader elected" identity="ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm"
I0525 13:19:48.576038       8 controller.go:172] "Backend successfully reloaded"
I0525 13:19:48.576278       8 controller.go:183] "Initial sync, sleeping for 1 second"
I0525 13:19:48.576823       8 event.go:282] Event(v1.ObjectReference{Kind:"Pod", Namespace:"verrazzano-ingress-nginx", Name:"ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm", UID:"cfe794c3-f178-4b6f-a24f-18be0267e3be", APIVersion:"v1", ResourceVersion:"4647", FieldPath:""}): type: 'Normal' reason: 'RELOAD' NGINX reload triggered due to a change in configuration
 { "@timestamp": "2022-05-25T13:27:40+00:00", "req_id": "c3c0b5142a3caa09953914c74afeaf3d", "proxy_upstream_name": "-", "proxy_alternative_upstream_name": "", "upstream_status": "", "upstream_addr": "", "message": "GET _", "http_request": { "requestMethod": "GET", "requestUrl": "_", "status": 400, "requestSize": "0", "responseSize": "", "userAgent": "", "remoteIp": "REDACTED-IP4-ADDRESS", "referer": "", "latency": " s", "protocol":"" } }
 { "@timestamp": "2022-05-25T13:27:40+00:00", "req_id": "c7ae274f4597237b576304ece0a02084", "proxy_upstream_name": "-", "proxy_alternative_upstream_name": "", "upstream_status": "", "upstream_addr": "", "message": "GET _", "http_request": { "requestMethod": "GET", "requestUrl": "_", "status": 400, "requestSize": "0", "responseSize": "", "userAgent": "", "remoteIp": "REDACTED-IP4-ADDRESS", "referer": "", "latency": " s", "protocol":"" } }
==== END logs for container controller of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
2022-05-25T13:19:42.377894Z	info	FLAG: --concurrency="2"
2022-05-25T13:19:42.378194Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-05-25T13:19:42.378261Z	info	FLAG: --help="false"
2022-05-25T13:19:42.378306Z	info	FLAG: --log_as_json="false"
2022-05-25T13:19:42.378334Z	info	FLAG: --log_caller=""
2022-05-25T13:19:42.378361Z	info	FLAG: --log_output_level="default:info"
2022-05-25T13:19:42.378387Z	info	FLAG: --log_rotate=""
2022-05-25T13:19:42.378413Z	info	FLAG: --log_rotate_max_age="30"
2022-05-25T13:19:42.378440Z	info	FLAG: --log_rotate_max_backups="1000"
2022-05-25T13:19:42.378466Z	info	FLAG: --log_rotate_max_size="104857600"
2022-05-25T13:19:42.378492Z	info	FLAG: --log_stacktrace_level="default:none"
2022-05-25T13:19:42.378524Z	info	FLAG: --log_target="[stdout]"
2022-05-25T13:19:42.378550Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-05-25T13:19:42.378576Z	info	FLAG: --outlierLogPath=""
2022-05-25T13:19:42.378602Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-05-25T13:19:42.378627Z	info	FLAG: --proxyLogLevel="warning"
2022-05-25T13:19:42.378653Z	info	FLAG: --serviceCluster="istio-proxy"
2022-05-25T13:19:42.378678Z	info	FLAG: --stsPort="0"
2022-05-25T13:19:42.378711Z	info	FLAG: --templateFile=""
2022-05-25T13:19:42.378745Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-05-25T13:19:42.378795Z	info	FLAG: --vklog="0"
2022-05-25T13:19:42.378828Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-05-25T13:19:42.379288Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::2048:c4ff:fe9f:1f8c] type=sidecar id=ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-05-25T13:19:42.379434Z	info	Apply proxy config from env {}

2022-05-25T13:19:42.380684Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-05-25T13:19:42.380754Z	info	JWT policy is third-party-jwt
2022-05-25T13:19:42.405320Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-05-25T13:19:42.405490Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-05-25T13:19:42.405740Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-05-25T13:19:42.405846Z	info	Opening status port 15020
2022-05-25T13:19:42.438728Z	info	ads	All caches have been synced up in 67.943365ms, marking server ready
2022-05-25T13:19:42.439974Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-05-25T13:19:42.440239Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-05-25T13:19:42.440152Z	info	sds	Starting SDS grpc server
2022-05-25T13:19:42.443342Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-05-25T13:19:42.446044Z	info	Starting proxy agent
2022-05-25T13:19:42.443532Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-05-25T13:19:42.446356Z	info	Epoch 0 starting
2022-05-25T13:19:42.446552Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-05-25T13:19:42.988026Z	info	cache	generated new workload certificate	latency=547.788102ms ttl=23h59m59.011997612s
2022-05-25T13:19:42.988781Z	info	cache	Root cert has changed, start rotating root cert
2022-05-25T13:19:42.988819Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-05-25T13:19:42.988958Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.011048996s
2022-05-25T13:19:43.307186Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-05-25T13:19:43.675096Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm.ingress-nginx-1
2022-05-25T13:19:43.675272Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.324737996s
2022-05-25T13:19:43.675886Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-05-25T13:19:43.715578Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm.ingress-nginx-2
2022-05-25T13:19:43.716042Z	info	cache	returned workload certificate from cache	ttl=23h59m58.283974726s
2022-05-25T13:19:43.716400Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm.ingress-nginx resources:1 size:9.2kB resource:default
2022-05-25T13:19:46.415791Z	info	Readiness succeeded in 4.040696609s
2022-05-25T13:19:46.416375Z	info	Envoy proxy is ready
2022-05-25T13:48:39.348194Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-controller-6b8bb69d6d-htjsm ====
